Bisbis10 add DTO's